# lildb

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: lib.rs  utils.rs
api/src/codec/: mod.rs  tests.rs
api/src/query/: mod.rs
api/src/request/: content.rs  mod.rs  tests.rs
api/src/response/: content.rs  mod.rs  query_res.rs  tests.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: lib.rs
daemon/: Cargo.toml
daemon/src/: daemon.rs  error.rs  errors.rs  lib.rs  main.rs
daemon/src/config/: mod.rs  tests.rs
daemon/src/db/: mod.rs
daemon/src/logging/: mod.rs
lildb/: Cargo.toml
lildb-api/src/: lib.rs
lildb/src/: lib.rs  main.rs
lildb/src/session/: mod.rs
query-lang/: Cargo.toml  README.md
query-lang/src/: lib.rs  tree.rs
query-lang/src/lexer/: mod.rs
query-lang/src/parser/: mod.rs  tree.rs
query-lang/tests/: parsing_tests.rs
server/: Cargo.toml  README.md
server/src/: core.rs  error.rs  lib.rs  logging.rs
server/src/config/: mod.rs  tests.rs
server/src/db/: mod.rs  tests.rs
server/src/db_mgr/: mod.rs
server/src/session/: mod.rs
server/src/util/: mod.rs  testing.rs  tests.rs
server/src/utils/: mod.rs  testing.rs
src/: error.rs  lib.rs  test_utils.rs  util.rs
src/db/: mod.rs  record.rs  schema.rs  tuple.rs
src/db/buf_mgr/: mod.rs  pageref.rs  tests.rs
src/db/disk/: mod.rs
src/db/disk/page/: fixed_len.rs  mod.rs
src/db/disk_mgr/: mod.rs  page.rs  tests.rs
src/db/file/: heapfile.rs  mod.rs
src/db/file/heapfile/: hfpage.rs  mod.rs  tests.rs
src/db/objects/: mod.rs
src/db/qep/: mod.rs
src/query/: mod.rs  types.rs
src/query/functions/: definitions.rs  mod.rs
subcrates/lql/: Cargo.toml  README.md
subcrates/lql/src/: lib.rs
subcrates/lql/src/lexer/: tests.rs
subcrates/lql/src/parser/: mod.rs  tree.rs
subcrates/lql/tests/: integration_tests.rs  parsing_tests.rs
tests/: integration_tests.rs  utils.rs
