[package]
name = "lildb-cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "lildb-cli"
path = "src/main.rs"

[dependencies]
clap = "4.5.50"
lildb-client = { path = "../client" }
lildb-ql = { path = "../query-lang" } 
log = { workspace = true }
simple_logger = "5.1"