[package]
name = "lildb"
description = "LilDB daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "lildb"
path = "src/main.rs"

[dependencies]
lildb-api = { path = "../lildb-api" }
log = { workspace = true }

[build-dependencies]

[dev-dependencies]
tempfile = "3.23.0"