[package]
name = "server"
description = "LilDB server daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "lildb-server"
path = "src/bin/main.rs"

[dependencies]
lildb-api = { path = "../api" }
log = { workspace = true }

[build-dependencies]

[dev-dependencies]
tempfile = "3.23.0"