[package]
name = "lildb-server"
description = "LilDB server daemon"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "lildb_server_core"
path = "src/lib.rs"

[[bin]]
name = "lildb-server"
path = "src/bin/main.rs"

[dependencies]
lildb-api = { path = "../api" }
log = { workspace = true }

[build-dependencies]

[dev-dependencies]
tempfile = "3.23.0"